Make sure columns styles have correct display type and vertical align

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -68,6 +68,12 @@ table {
 	 padding-right: 30px;
  }
 
+.col-1-3,
+.col-2-3 {
+	display: inline-block;
+	vertical-align: top;
+}
+
 .col-1-3 {
 	width: 33.33%;
 }
